# ag-auto-accept

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/tech/: pywinauto.md
src/ag_accept/: automation.py  config.py  main.py  ui.py
src/ag_accept/services/: automation_service.py  text_query_service.py
src/ag_auto_accept/: main.py
tests/: test_automation_loop.py
